# One-Sided-Crossing-Minimization

./: .gitignore  Cargo.toml  README.md  analytics.ipynb  generate.py
ocm-cli/: Cargo.toml
ocm-cli/src/: main.rs
ocm-gtk/: Cargo.toml
ocm-gtk/src/: gtk_utils.rs  main.rs
ocm-gtk/src/plotter_widget/: imp.rs  mod.rs
ocm-parser/: Cargo.toml
ocm-parser/src/: bipartite_graph.rs  graph_base.rs  lib.rs  parser.rs  run_output.rs
ocm-plotter/: Cargo.toml
ocm-plotter/src/: lib.rs  plottable.rs
ocm-solver/: Cargo.toml
ocm-solver/src/: algo_utils.rs  algorithms.rs  crossings.rs  graphs.rs  lib.rs
ocm-solver/src/algorithms/: barycenter_heuristic.rs  median_heuristic.rs
ocm-solver/src/graphs/: abscissa_graph.rs
output/large/: 1.gr  10.gr  100.gr  11.gr  12.gr  13.gr  14.gr  15.gr  16.gr  17.gr  18.gr  19.gr  2.gr  20.gr  21.gr  22.gr  23.gr  24.gr  25.gr  26.gr  27.gr  28.gr  29.gr  3.gr  30.gr  31.gr  32.gr  33.gr  34.gr  35.gr  36.gr  37.gr  38.gr  39.gr  4.gr  40.gr  41.gr  42.gr  43.gr  45.gr  (+58 more)
output/medium/: 10.gr  100.gr  11.gr  12.gr  13.gr  14.gr  15.gr  16.gr  17.gr  2.gr  20.gr  21.gr  22.gr  23.gr  24.gr  25.gr  26.gr  27.gr  29.gr  3.gr  30.gr  31.gr  32.gr  33.gr  34.gr  35.gr  36.gr  37.gr  38.gr  39.gr  40.gr  41.gr  42.gr  43.gr  44.gr  45.gr  46.gr  47.gr  48.gr  49.gr  (+53 more)
output/tiny/: cycle_8_shuffled.gr  cycle_8_sorted.gr  grid_9_shuffled.gr  ladder_4_4_shuffled.gr  ladder_4_4_sorted.gr  matching_4_4.gr  plane_5_6.gr
report/: .gitignore  ocm-report.tex  references.bib
