[package]
name = "ocm-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for solving the OCM problem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.4.18", features = ["derive"] }
ocm-parser = { path = "../ocm-parser" }
ocm-plotter = { path = "../ocm-plotter" }
ocm-solver = { path = "../ocm-solver" }
