[package]
name = "ocm-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.9"
clap = { version = "4.5.3", features = ["derive"] }
ocm-parser = { path = "../ocm-parser" }
ordered-float = "4.2.0"

[dev-dependencies]
rayon = "1.10.0"
walkdir = "2.5.0"
